@startuml

title __ADAPTER's Class Diagram__\n

  package com.lt.personal_stadiumbookingsystem {
    package com.lt.personal_stadiumbookingsystem.ui.adapter {
      class GymAdapter {
          + GymAdapter()
          # initView()
          # updateView()
      }
    }
  }
  

  package com.lt.personal_stadiumbookingsystem {
    package com.lt.personal_stadiumbookingsystem.ui.adapter {
      class HistoryAdapter {
          + HistoryAdapter()
          # initView()
          # updateView()
          - showOrderState()
      }
    }
  }
  

  package com.lt.personal_stadiumbookingsystem {
    package com.lt.personal_stadiumbookingsystem.ui.adapter {
      class SiteAdapter {
          + SiteAdapter()
          # initView()
          # updateView()
      }
    }
  }
  

  package com.lt.personal_stadiumbookingsystem {
    package com.lt.personal_stadiumbookingsystem.ui.adapter {
      class TimeAdapter {
          - mCslTimes : int[]
          - mTimeStarts : int[]
          - mTimeEnds : int[]
          - mTimeExpireStates : int[]
          - mTimeOrderStates : int[]
          + TimeAdapter()
          # initView()
          # updateView()
          - initData()
      }
    }
  }
  

  GymAdapter -up-|> BaseRecyclerViewAdapter
  HistoryAdapter -up-|> BaseRecyclerViewAdapter
  HistoryAdapter o-- ConfirmDialog : mPayDialog
  HistoryAdapter o-- ConfirmDialog : mCancelDialog
  SiteAdapter -up-|> BaseRecyclerViewAdapter
  TimeAdapter -up-|> OnClickListener
  TimeAdapter -up-|> BaseRecyclerViewAdapter
  TimeAdapter o-- DataCallBack : mBookCallBack
  TimeAdapter o-- ConfirmDialog : mBookDialog


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
